# tempo_real

./: .env  .env.example  API_AGHU  Makefile  README.md  cirurgias_aghu_tratado.xlsx  dados_da_API.xlsx  docker-compose.yml  encerrar.py  filename.csv  iniciar.py  pyproject.toml  requirements.txt
db/: carga_inicial.py  connection.py  init.sql  main.py  models.py  queries.py
implementacao_api/src/implementacao_api/: main.py
src/config/: settings.py
src/consumers/historico/: main.py
src/consumers/redis_cache/: main.py
src/dashboard/: app.py
src/producer/: checkpoint.py  extract.py  main.py  transform.py
src/tests/: test_consumer.py  test_producer.py
src/utils/: db.py  kafka.py  redis_client.py
