[project]
name = "implementacao-api"
version = "0.1.0"
description = ""
authors = [
    {name = "davidvaz18",email = "vazdavid460@gmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "pandas (>=3.0.2,<4.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
